# -steganographr-python

./: README.md  setup.cfg  setup.py  steganographr.py
steganographr/: __init__.py  __main__.py
