[metadata]
name = steganographr
version = 1.0.0
author = JMcB
description = Hide text in plain sight using invisible zero-width characters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JMcB17/steganographr-python
classifiers =
    Programming Language :: Python :: 3
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Security

[options]
packages = find:
python_requires = >=3.6
